[Fix] UI 깨짐 수정 및 필터링 조건 추가

--- a/IntegrateLecture/lecture/static/css/all_lec_body.css
+++ b/IntegrateLecture/lecture/static/css/all_lec_body.css
@@ -253,6 +253,9 @@ p.price {
 .level-중급이상 {
     background-color: #b534e3; 
 }
+.level-All {
+    background-color: #2a8ef1;
+}
 
 /***********************************************************************************************/
 .pagination {
