--- a/IntegrateLecture/lecture/templates/index.html
+++ b/IntegrateLecture/lecture/templates/index.html
@@ -53,6 +53,12 @@
         <div class="lec-container">
             <div class="filters-container">
                 <div class="category-container">
+                    <select id="platform">
+                        <option value="">모든 사이트</option>
+                        <option value="Coursera">코세라</option>
+                        <option value="Inflearn">인프런</option>
+                        <option value="Udemy">유데미</option>
+                    </select>
                     <select id="mainCategory">
                         <option value="">분야 선택</option>
                     </select>
@@ -70,6 +76,7 @@
                         <option value="입문">입문</option>
                         <option value="초급">초급</option>
                         <option value="중급이상">중급이상</option>
+                        <option value="All">All</option>
                     </select>
                 </div>
             </div>
