--- a/IntegrateLecture/lecture/static/css/base_header.css
+++ b/IntegrateLecture/lecture/static/css/base_header.css
@@ -6,7 +6,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid #c4c2c2;
+    border:none;
     position: relative;
     z-index: 1;
 }
