--- a/IntegrateLecture/lecture/static/css/detail_body2.css
+++ b/IntegrateLecture/lecture/static/css/detail_body2.css
@@ -35,8 +35,8 @@
     flex-direction: row;
     width: 100%;
     height: 46%;
-    background: #001123;
-    /* background: linear-gradient(to right, #23273e, #646883); */
+    /* background: #172C5C; */
+    background: linear-gradient(to right, #172C5C, #727693);
     padding: 20px 40px;
     box-sizing: border-box;
     overflow: hidden;
@@ -122,7 +122,7 @@
     margin-right: 40px;
     margin-bottom: 40px;
     border-radius: 10px;
-    box-shadow: 0px 0px 300px 50px #36445e;
+    /* box-shadow: 0px 0px 300px 50px #36445e; */
 }
 
 
@@ -154,11 +154,48 @@
 }
 
 .lecture-description, .lecture-review, .lecture-price-history, .lecture-whatlearn{
+    display: flex;
+    flex-direction: row;
     margin: 20px 0px;
     border: none;
     padding-top: 30px;
     padding-bottom: 30px;
 }
+
+.detail-title{
+    display: inline-block;
+    border: 4px solid #e84e6865;
+    border-radius: 20px;
+    margin-right: 40px;
+    padding: 20px;
+}
+
+.detail-title p {
+    text-align: center;
+}
+
+.detail-body{
+    padding: 20px;
+    position: relative;
+	background: #fffbee;
+	border-radius: 20px;
+}
+
+.lecture-description p:after{
+    content: '';
+	position: absolute;
+	left: 0;
+	top: 30%;
+	width: 0;
+	height: 0;
+	border: 30px solid transparent;
+	border-right-color: #fffbee;
+	border-left: 0;
+	border-bottom: 0;
+	margin-top: -10px;
+	margin-left: -30px;
+}
+
 
 #what-do-i-learn-container .item {
     margin-bottom: 15px;
