--- a/IntegrateLecture/lecture/templates/user_base.html
+++ b/IntegrateLecture/lecture/templates/user_base.html
@@ -228,10 +228,10 @@
                                 <div class="card-body">
                                     <h6 class="d-flex align-items-center mb-3">
                                         <iclass="material-icons text-info mr-2">My Skill</iclass=></h6>
-                                        {% for skill, value in user.skills %}
+                                        {% for skill, value in user.skills.items %}
                                             <small> - {{ skill }}</small>
                                             <div class="progress mb-3" style="height: 5px">
-                                                <div class="progress-bar bg-primary" role="progressbar" style="width: {{ value }}%" aria-valuenow="{{ value }}" aria-valuemin="0" aria-valuemax="10"></div>
+                                                <div class="progress-bar bg-primary" role="progressbar" style="width: {{ value.0 }}%" aria-valuenow="{{ value.0 }}" aria-valuemin="0" aria-valuemax="10"></div>
                                             </div>
                                         {% empty %}
                                             <small>No skills added yet.</small>
