[Fix] 강사명 많아서 발생하는 문제 수정

--- a/IntegrateLecture/lecture/static/css/all_lec_body.css
+++ b/IntegrateLecture/lecture/static/css/all_lec_body.css
@@ -193,6 +193,11 @@ p.lecture-name {
 }
 
 p.teacher {
+    display: -webkit-box;
+    -webkit-line-clamp: 1; 
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
     position: absolute;
     bottom: 60px;
     font-size: 0.9em;
