--- a/IntegrateLecture/lecture/static/css/all_lec_body.css
+++ b/IntegrateLecture/lecture/static/css/all_lec_body.css
@@ -2,14 +2,26 @@
 .banner-container {
     width: 100%;
     height: 300px;
-    background-color: #c6dce6;
-    text-align: center;
-    overflow:hidden;
+    overflow: hidden; 
+    position: relative;
+    margin:0 auto;
 }
 
-.banner-container img {
-    width: 100%;
-    height: auto; /* 비율 유지 */
+.banner-container img{
+    vertical-align: top;
+    object-fit: cover; 
+    position: absolute;
+    height: 100%;
+}
+
+.slick-dots {
+    bottom: 10px;
+}
+
+.slick-dots li button:before {
+    font-size: 10px;
+    line-height: 10px;
+    color: #666666;
 }
 
 
