--- a/IntegrateLecture/lecture/templates/index.html
+++ b/IntegrateLecture/lecture/templates/index.html
@@ -7,6 +7,8 @@
     <title>메인 화면</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
     <link rel="stylesheet" href="{% static 'css/all_lec_body.css' %}">
     <link rel="stylesheet" href="{% static 'css/base_header.css' %}">
 </head>
@@ -48,7 +50,8 @@
     </header>
     <main>
         <div class="banner-container">
-            <p> 광고 비스무리한거 삽입 예정 </p>
+            <img src="{% static 'assets/배너1.jpg' %}">
+            <img src="{% static 'assets/배너2.jpg' %}">
         </div>
         <div class="lec-container">
             <div class="filters-container">
@@ -120,5 +123,19 @@
         {% endif %}
     </script>
     <script src="{% static 'js/all_lec.js' %}"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script>
+        $('.banner-container').slick({
+            autoplay: true,
+            autoplaySpeed: 1500,
+            dots: true,
+            infinite: true,
+            speed: 500,
+            fade: true,
+            cssEase: 'linear',
+            adaptiveHeight: true
+        });
+    </script>
+   
 </body>
 </html>
