--- a/IntegrateLecture/lecture/templates/user_base.html
+++ b/IntegrateLecture/lecture/templates/user_base.html
@@ -209,7 +209,7 @@
                                     <h6 class="d-flex align-items-center mb-3">
                                         <iclass="material-icons text-info mr-2">Wish List</iclass=>
                                     </h6>
-                                    {% comment %} <pre>{{ wishlist }}</pre>
+                                    <pre>{{ wishlist }}</pre>
                                     <ul class="wishlist-items">
                                         {% for item in wishlist %}
                                             <li class="wishlist-item">
@@ -219,7 +219,7 @@
                                         {% empty %}
                                             <li>No Wish Lecture added yet.</li>
                                         {% endfor %}
-                                    </ul> {% endcomment %}
+                                    </ul>
                                 </div>
                             </div>
                         </div>
