--- a/IntegrateLecture/lecture/static/css/all_lec_body.css
+++ b/IntegrateLecture/lecture/static/css/all_lec_body.css
@@ -1,17 +1,28 @@
-
+.banner-wrapper {
+    overflow: hidden; /* 하나의 이미지만 보이도록 설정 */
+    width: 100vw; /* 컨테이너 너비를 화면 너비로 설정 */
+    height: 300px
+}
 .banner-container {
+    display: flex; /* 리스트 아이템을 가로로 배치 */
+    padding: 0;
+    margin: 0;
+    list-style-type: none; /* 기본 리스트 스타일 제거 */
+    transition: transform 0.5s ease; /* 슬라이딩 애니메이션 */
+}
+
+.banner-box {
+    width: 100vw;
+    flex-shrink: 0;
+    /* float: none; */
+    text-align: center;
+    height: 300px;
+}
+
+.banner-box img {
     width: 100%;
     height: 300px;
-    background-color: #c6dce6;
-    text-align: center;
-    overflow:hidden;
 }
-
-.banner-container img {
-    width: 100%;
-    height: auto; /* 비율 유지 */
-}
-
 
 /***************************************************************************/
 .lec-container {
