--- a/IntegrateLecture/lecture/static/css/all_lec_body.css
+++ b/IntegrateLecture/lecture/static/css/all_lec_body.css
@@ -8,10 +8,9 @@
 }
 
 .banner-container img{
-    vertical-align: top;
     object-fit: cover; 
     position: absolute;
-    height: 100%;
+    height: 300px;
 }
 
 .slick-dots {
