--- a/IntegrateLecture/lecture/templates/user_base.html
+++ b/IntegrateLecture/lecture/templates/user_base.html
@@ -12,139 +12,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="{% static 'css/all_lec_body.css' %}">
     <link rel="stylesheet" href="{% static 'css/base_header.css' %}">
-    <style type="text/css">
-        body {
-            margin-top: 20px;
-            color: #1a202c;
-            text-align: left;
-            background-color: #e2e8f0;
-        }
-
-        .main-body {
-            padding: 15px;
-        }
-
-        .card {
-            box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .1), 0 1px 2px 0 rgba(0, 0, 0, .06);
-        }
-
-        .card {
-            position: relative;
-            display: flex;
-            flex-direction: column;
-            min-width: 0;
-            word-wrap: break-word;
-            background-color: #fff;
-            background-clip: border-box;
-            border: 0 solid rgba(0, 0, 0, .125);
-            border-radius: .25rem;
-        }
-
-        .card-body {
-            flex: 1 1 auto;
-            min-height: 1px;
-            padding: 1rem;
-        }
-
-        .gutters-sm {
-            margin-right: -8px;
-            margin-left: -8px;
-        }
-
-        .gutters-sm>.col,
-        .gutters-sm>[class*=col-] {
-            padding-right: 8px;
-            padding-left: 8px;
-        }
-
-        .mb-3,
-        .my-3 {
-            margin-bottom: 1rem !important;
-        }
-
-        .bg-gray-300 {
-            background-color: #e2e8f0;
-        }
-
-        .h-100 {
-            height: 100% !important;
-        }
-
-        .shadow-none {
-            box-shadow: none !important;
-        }
-        a {
-            color: black;
-            text-decoration: none;
-        }
-        .delete-icon {
-            display: none;
-            cursor: pointer;
-        }
-        .wishlist-item:hover .delete-icon {
-            display: inline;
-        }
-    </style>
-    <script> // User_detail의 내용을 바꿀 때 Enter 키를 사용하면 수정 버튼이 클릭 되도록 기능 추가
-        {% comment %} document.addEventListener('DOMContentLoaded', function() {
-            var form = document.getElementById('myForm');
-            form.addEventListener('keydown', function(event) {
-                if (event.key === 'Enter') {
-                    event.preventDefault();  // 기본 엔터키 동작 방지
-                    form.querySelector('button[type="submit"]').click();
-                }
-            });
-        }); {% endcomment %}
-
-        document.addEventListener("DOMContentLoaded", function() {
-            const deleteButton = document.querySelectorAll('.delete-btn');
-
-            deleteButton.forEach(button => {
-                button.addEventListener('click', function(event) {
-                    event.preventDefault();
-
-                    const confirmation = confirm("정말로 탈퇴하시겠습니까?");
-
-                    if (confirmation) {
-                        this.closest('form').submit();
-                    }
-                });
-            });
-        });
-
-        document.addEventListener("DOMContentLoaded", function() {
-            const removeButtons = document.querySelectorAll(".remove-wishlist-item");
-
-            removeButtons.forEach(button => {
-                button.addEventListener("click", function(event) {
-                    event.preventDefault();
-                    const listItem = this.closest(".wishlist-item");
-                    const lectureId = listItem.getAttribute("data-lecture-id")
-
-                    fetch("{% url 'wishlist_remove' pk=user.pk %}", {
-                        method: "POST",
-                        headers: {
-                            "Content-Type": "application/json",
-                            "X-CSRFToken": "{{ csrf_token }}"
-                        },
-                        body: JSON.stringify({ lecture: lectureId })
-                    })
-                    .then(response => response.json())
-                    .then(data => {
-                        if (data.success) {
-                            listItem.remove();
-                            location.reload();
-                        } else {
-                            alert(data.message);
-                        }
-                    })
-                    .catch(error => {
-                        console.error("Error:", error);
-                    });
-                });
-            });
-        });
-    </script>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/user_base.css'%}">
+    <script src="{% static 'js/user_base.js' %}"></script>
 </head>
 <body>
     {% block header %}{%endblock%}
@@ -169,10 +38,12 @@
                                                 <div class="col-sm-3">
                                                     <h6 class="mb-0">이메일</h6>
                                                 </div>
-                                                <div class="col-sm-9 text-secondary"><h6>{{ user.user_email }}</h6></div>
+                                                <div class="col-sm-9 text-secondary">
+                                                    <h6>{{ user.user_email }}</h6>
+                                                </div>
                                             </div>
                                             <hr>
-                                        {% block content %}    {% endblock %}
+                                        {% block content %}{% endblock %}
                                         </div>
                                     </div>
                                 </div>
@@ -183,15 +54,15 @@
                         <div class="card h-100">
                             <div class="card-body">
                                 <h6 class="d-flex align-items-center mb-3">
-                                    <iclass="material-icons text-info mr-2">My Skill</iclass=></h6>
-                                    {% for skill, value in user.skills.items %}
-                                        <small> - {{ skill }}</small>
-                                        <div class="progress mb-3" style="height: 5px">
-                                            <div class="progress-bar bg-primary" role="progressbar" style="width: {{ value.0 }}%" aria-valuenow="{{ value.0 }}" aria-valuemin="0" aria-valuemax="10"></div>
-                                        </div>
-                                    {% empty %}
-                                        <small>No skills added yet.</small>
-                                    {% endfor %}
+                                <iclass="material-icons text-info mr-2">My Skill</iclass=></h6>
+                                {% for skill, value in user.skills.items %}
+                                    <small> - {{ skill }}</small>
+                                    <div class="progress mb-3" style="height: 5px">
+                                        <div class="progress-bar bg-primary" role="progressbar" style="width: {{ value.0 }}%" aria-valuenow="{{ value.0 }}" aria-valuemin="0" aria-valuemax="10"></div>
+                                    </div>
+                                {% empty %}
+                                    <small>No skills added yet.</small>
+                                {% endfor %}
                             </div>
                         </div>
                     </div>
