--- a/IntegrateLecture/lecture/static/css/detail_body2.css
+++ b/IntegrateLecture/lecture/static/css/detail_body2.css
@@ -29,26 +29,24 @@
 /******************************************************************************************************/
 /* 강의 정보 요약 섹션 */
 .lecture-summary {
-    display: flex;
+    display: block;
     position: relative;
     left: 0;
-    flex-direction: row;
     width: 100%;
-    height: 46%;
-    /* background: #172C5C; */
-    background: linear-gradient(to right, #172C5C, #727693);
-    padding: 20px 40px;
+    background: #001123;
+    /* background: linear-gradient(to right, #23273e, #646883); */
     box-sizing: border-box;
     overflow: hidden;
+    min-height: 340px;
 }
 
 .summary-info {
-    display: flex;
-    flex-direction: column;
-    flex: 2;
-    margin-left: 90px;
-    margin-right: 50px;
+    display: inline-block;
+    margin: 20px;
+    width: 65%; /* 화면의 2/3 */
+    padding: 0px 80px 20px 100px; /* 여백 추가 */
     justify-content: center; /* 수평 중앙 정렬 */
+    
 }
 
 .summary-info h1 {
@@ -111,18 +109,23 @@
 /******************************************************************************************************/
 /* 썸네일 섹션 */
 .lecture-thumbnail {
-    flex: 1.2;
-    vertical-align: center;
+    display: inline-block;
+    position: absolute;
+    width: 25%;
+    height: 100%;
+}
+.lecture-thumbnail div {
+    display: flex;
+    height: 100%;
+    justify-content: center; /* 가로 중앙 정렬 */
+    align-items: center; /* 세로 중앙 정렬 */
 }
 
 .lecture-thumbnail img {
+    border-radius: 20px;
     width: 370px; 
     height: 240px; 
-    margin-top : 30px;
-    margin-right: 40px;
-    margin-bottom: 40px;
-    border-radius: 10px;
-    /* box-shadow: 0px 0px 300px 50px #36445e; */
+    box-shadow: 0px 0px 300px 50px #36445e;
 }
 
 
@@ -148,54 +151,17 @@
 .custom-hr {
     width: 100%;
     border : 0px;
-    border-top: 4px solid #e84e6865;
+    border-top: 4px solid #5b73ec65;
     border-radius: 10px;
     margin:20px 0px;
 }
 
 .lecture-description, .lecture-review, .lecture-price-history, .lecture-whatlearn{
-    display: flex;
-    flex-direction: row;
     margin: 20px 0px;
     border: none;
     padding-top: 30px;
     padding-bottom: 30px;
 }
-
-.detail-title{
-    display: inline-block;
-    border: 4px solid #e84e6865;
-    border-radius: 20px;
-    margin-right: 40px;
-    padding: 20px;
-}
-
-.detail-title p {
-    text-align: center;
-}
-
-.detail-body{
-    padding: 20px;
-    position: relative;
-	background: #fffbee;
-	border-radius: 20px;
-}
-
-.lecture-description p:after{
-    content: '';
-	position: absolute;
-	left: 0;
-	top: 30%;
-	width: 0;
-	height: 0;
-	border: 30px solid transparent;
-	border-right-color: #fffbee;
-	border-left: 0;
-	border-bottom: 0;
-	margin-top: -10px;
-	margin-left: -30px;
-}
-
 
 #what-do-i-learn-container .item {
     margin-bottom: 15px;
@@ -219,15 +185,14 @@
 }
 
 .sticky-title {
-    background: #e84e68;
+    background: #fffbec;
     padding: 10px;
     border-radius: 10px 10px 0px 0px;
     width: 100%; 
-    height: 10%;
+    height: 12%;
     display: block;
     top: 50px;
     text-align: center;
-    color: #fff;
 }
 
 .sticky-text {
@@ -235,7 +200,7 @@
     border: 1.5px solid #e7e7e7;
     background-color: #f3f3f3;
     width: 100%; 
-    height: 180px;
+    height: 190px;
     display: block;
     font-size : 15px;
     gap: 10px;
@@ -367,11 +332,12 @@
 
 /* 반응형 디자인 */
 @media (max-width: 1024px) {
-    .lecture-detail, .sticky-container {
+    
+    .lecture-detail, .sticky-container, .lecture-thumbnail {
         width: 100%;
     }
     
-    .sticky-container {
+    .sticky-container, .lecture-thumbnail {
         display: none; /* 화면이 줄어들면 숨김 */
     }
     
