--- a/IntegrateLecture/lecture/static/css/all_lec_body.css
+++ b/IntegrateLecture/lecture/static/css/all_lec_body.css
@@ -65,17 +65,19 @@
     width: 100%; 
     height: 180px;
     font-size : 15px;
+    
 }
 
 .recommend-etc p{
-    color:#393939;
+    color:#0b0b2d;
+    font-weight: 400;
     margin-top: 10px;
     display: -webkit-box;
-    -webkit-line-clamp: 3; /* 두 줄까지만 표시, 비표준 속성이라서 발생하는 오류 */
+    -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
-    line-height: 1.2em; /* 줄 간격 조절 */
+    line-height: 1.5em; 
 }
 
 .recommend-name {
